--- a/src/components/TaskList/TaskList.module.css
+++ b/src/components/TaskList/TaskList.module.css
@@ -51,3 +51,18 @@
     padding: 0px;
     align-self: stretch;
 }
+
+.tasklist_empty {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    padding: 4rem 1.5rem;
+}
+
+.ActivityLogIcon {
+    width: 3.75rem;
+    height: 3.75rem;
+    color: var(--gray500);
+    margin-bottom: 1rem;
+}
